fix alignment bullet content for desktop view

--- a/source/stylesheets/partials/_bullets.scss
+++ b/source/stylesheets/partials/_bullets.scss
@@ -52,6 +52,10 @@
 
   .bullet-content {
     margin-bottom: 2em;
+    text-align: center;
+    @include media($medium-screen) {
+      text-align: left;
+    }
   }
 
 
